--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "houkago-policy-site",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": true,
   "description": "ホウカゴ小説リーダーのプライバシーポリシーサイト",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "export": "next build && next export",
-    "start": "next start"
+    "build": "next build && next export",
+    "start": "next start",
+    "export": "next export",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "12.0.7",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
