--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "ホウカゴ小説リーダーのプライバシーポリシーサイト",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
-    "export": "next export",
+    "export": "next build && next export",
     "lint": "next lint"
   },
   "dependencies": {
